<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BusinessLoginPageActivity">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="40dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="111dp"
                android:layout_marginTop="2dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/login"
                tools:ignore="ImageContrastCheck" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/cinzel_decorative_bold"
                android:gravity="center"
                android:text="@string/login_now"
                android:textColor="@color/black"
                android:textSize="23sp" />

            <View
                android:id="@+id/view2"
                android:layout_width="200dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:background="@color/black" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_emailId_bss"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="23dp"
                android:layout_marginEnd="2dp"
                android:background="@drawable/et_background"
                android:ems="10"
                android:fontFamily="@font/cinzel_decorative_bold"
                android:gravity="center"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:padding="11dp"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textColorHint="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_passwordId_bss"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="23dp"
                android:layout_marginEnd="2dp"
                android:background="@drawable/et_background"
                android:ems="10"
                android:fontFamily="@font/cinzel_decorative_bold"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:padding="11dp"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textColorHint="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login_bss"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="23dp"
                android:layout_marginTop="23dp"
                android:layout_marginEnd="23dp"
                android:background="@color/purple_200"
                android:fontFamily="@font/cinzel_decorative_bold"
                android:text="@string/login"
                android:textColor="#5E35B1"
                android:textSize="23sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_reset_password_bss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="23dp"
                android:text="@string/resetpassword"
                android:textColor="@color/black"
                android:textSize="23sp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="23dp"
                android:layout_marginBottom="34dp"
                android:gravity="center"
                android:orientation="horizontal">

                <View
                    android:id="@+id/view3"
                    android:layout_width="90dp"
                    android:layout_height="2dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="13dp"
                    android:background="@color/black" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cinzel_decorative_bold"
                    android:text="@string/or"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <View
                    android:id="@+id/view4"
                    android:layout_width="90dp"
                    android:layout_height="2dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="13dp"
                    android:background="@color/black" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/google_logIn_bs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/google_bg"
                    android:drawableStart="@drawable/search"
                    android:padding="12dp"
                    android:text="@string/google"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="23sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="23dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/make_account_bs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cinzel_decorative_bold"
                    android:gravity="center"
                    android:padding="3dp"
                    android:text="@string/make_an_account"
                    android:textColor="@color/black"
                    android:textSize="23sp" />

                <View
                    android:id="@+id/view5"
                    android:layout_width="300dp"
                    android:layout_height="2dp"
                    android:layout_gravity="center"
                    android:background="@color/black" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.gms.ads.AdView
        android:id="@+id/LoginAdView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-3940256099942544/6300978111"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat3"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>