<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClientPageActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="23dp"
        android:background="@drawable/layout_bg"
        android:orientation="vertical"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp"
            android:fontFamily="@font/cinzel_decorative_bold"
            android:gravity="center"
            android:text="@string/who_is_using_this_app"
            android:textColor="@color/black"
            android:textSize="23sp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageView2"
                android:layout_width="165dp"
                android:layout_height="281dp"
                android:padding="23dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/bussness" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageView3"
                android:layout_width="194dp"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/costummer" />

        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="23dp"
            android:orientation="horizontal"
            android:padding="12dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/business"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="13dp"
                android:layout_weight="1"
                android:fontFamily="@font/cinzel_decorative_bold"
                android:text="@string/business" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/consumer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/cinzel_decorative_bold"
                android:text="@string/consumer" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>